--- a/public/css/globalStyles.css
+++ b/public/css/globalStyles.css
@@ -21,7 +21,7 @@
     --background-primary: #d7d9e0;
     --background-secondary: #cecece; /* #30303f */
     --background-terciary: #ffffff;
-    --background-highlight: #575760;
+    --background-highlight: #848486;
     --accent-primary: #6c76ce;
     --accent-secondary: #8086d4;
     --accent-terciary: #5667c7;
